rename login function to improve clarity and consistency

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div>
   <h2>Firebase</h2>
-  <button onclick="loginComGoogle()">
+  <button onclick="loginWithGoogle()">
     Login with Google
     <img src="https://www.vectorlogo.zone/logos/google/google-icon.svg" alt="google logo" width="20" height="20">
   </button>
